# storage-eventd

./: .gitignore  Makefile.am  TODO  autogen.sh  configure.ac
config/: Makefile.am  email-template.txt  example.conf  storage-eventd.conf
man/: Makefile.am  storage-eventd.8  storage-eventd.conf.5
packaging/: Makefile.am  storage-eventd.spec  storage-eventd.spec.in
src/: Makefile.am  action.c  action.h  assert.c  common.h  config.c  config.h  filter.c  filter.h  log.c  main.c  storage-eventd.service  subst.c  subst.h  test.c  uevent.c  uevent.h  util.c  util.h
src/actions/: Makefile.am  email.c  exec.c  ignore.c
src/filters/: Makefile.am  devpath.c  ueventvar.c  uuid.c
src/test/: Makefile.am  test_log.c  test_mntscan.c  test_subst.c  test_subst.expected  test_util.c
